// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Lap /> tests snapshot test on paused state 1`] = `
<div
  className="flex flex-col laps-container"
>
  <div
    className="lap-header"
  >
    Laps
  </div>
  <table>
    <thead>
      <tr>
        <th>
          Lap#
        </th>
        <th>
          Start Time
        </th>
        <th>
          End Time
        </th>
        <th>
          Elapsed Time
        </th>
      </tr>
    </thead>
    <tbody />
  </table>
</div>
`;

exports[`<Lap /> tests snapshot test on paused state with laps 1`] = `
<div
  className="flex flex-col laps-container"
>
  <div
    className="lap-header"
  >
    Laps
  </div>
  <table>
    <thead>
      <tr>
        <th>
          Lap#
        </th>
        <th>
          Start Time
        </th>
        <th>
          End Time
        </th>
        <th>
          Elapsed Time
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className=""
      >
        <td>
          3
        </td>
        <td>
          00:00:02.000
        </td>
        <td>
          
        </td>
        <td>
          NaN:NaN:NaN.NaN
        </td>
      </tr>
      <tr
        className=""
      >
        <td>
          2
        </td>
        <td>
          00:00:03.000
        </td>
        <td>
          00:00:02.000
        </td>
        <td>
          00:00:01.000
        </td>
      </tr>
      <tr
        className=""
      >
        <td>
          1
        </td>
        <td>
          00:00:04.000
        </td>
        <td>
          00:00:03.000
        </td>
        <td>
          00:00:01.000
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<Lap /> tests snapshot test on running state 1`] = `
<div
  className="flex flex-col laps-container"
>
  <div
    className="lap-header"
  >
    Laps
  </div>
  <table>
    <thead>
      <tr>
        <th>
          Lap#
        </th>
        <th>
          Start Time
        </th>
        <th>
          End Time
        </th>
        <th>
          Elapsed Time
        </th>
      </tr>
    </thead>
    <tbody />
  </table>
</div>
`;

exports[`<Lap /> tests snapshot test on running state with laps 1`] = `
<div
  className="flex flex-col laps-container"
>
  <div
    className="lap-header"
  >
    Laps
  </div>
  <table>
    <thead>
      <tr>
        <th>
          Lap#
        </th>
        <th>
          Start Time
        </th>
        <th>
          End Time
        </th>
        <th>
          Elapsed Time
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className=""
      >
        <td>
          3
        </td>
        <td>
          00:00:02.000
        </td>
        <td>
          
        </td>
        <td>
          NaN:NaN:NaN.NaN
        </td>
      </tr>
      <tr
        className=""
      >
        <td>
          2
        </td>
        <td>
          00:00:03.000
        </td>
        <td>
          00:00:02.000
        </td>
        <td>
          00:00:01.000
        </td>
      </tr>
      <tr
        className=""
      >
        <td>
          1
        </td>
        <td>
          00:00:04.000
        </td>
        <td>
          00:00:03.000
        </td>
        <td>
          00:00:01.000
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<Lap /> tests snapshot test on stopped state 1`] = `
<div
  className="flex flex-col laps-container"
>
  <div
    className="lap-header"
  >
    Laps
  </div>
  <table>
    <thead>
      <tr>
        <th>
          Lap#
        </th>
        <th>
          Start Time
        </th>
        <th>
          End Time
        </th>
        <th>
          Elapsed Time
        </th>
      </tr>
    </thead>
    <tbody />
  </table>
</div>
`;

exports[`<Lap /> tests snapshot test on stopped state with laps 1`] = `
<div
  className="flex flex-col laps-container"
>
  <div
    className="lap-header"
  >
    Laps
  </div>
  <table>
    <thead>
      <tr>
        <th>
          Lap#
        </th>
        <th>
          Start Time
        </th>
        <th>
          End Time
        </th>
        <th>
          Elapsed Time
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className=""
      >
        <td>
          1
        </td>
        <td>
          00:00:04.000
        </td>
        <td>
          00:00:03.000
        </td>
        <td>
          00:00:01.000
        </td>
      </tr>
      <tr
        className=""
      >
        <td>
          2
        </td>
        <td>
          00:00:03.000
        </td>
        <td>
          00:00:02.000
        </td>
        <td>
          00:00:01.000
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
